# graphDB

./: .gitignore  .rooignore  .translator.toml  AGENTS.md  ANALYSIS.md  ANTI_PATTERNS_ANALYSIS.md  CLAUDE.md  COMPILATION_FIXES_PLAN.md  COMPLETION_STATUS.txt  CONTEXT_ANALYSIS_REPORT.md  CONTEXT_ARCHITECTURE_ANALYSIS.md  CONTEXT_DESIGN_COMPARISON.md  CONTEXT_IMPLEMENTATION_GUIDE.md  CONTEXT_MIGRATION_CHANGES.md  CONTEXT_REFACTOR_CHECKLIST.md  CONTEXT_REFACTOR_SUMMARY.md  CSR_DESIGN_ANALYSIS.md  Cargo.toml  E2E_TEST_STATUS.md  EVALUATOR_DESIGN_ANALYSIS.md  FIXES_CHECKLIST.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_SUMMARY_ISSUES.md  IMPROVEMENTS_LABEL_INDEX_SEEK.md  ISSUE_ANALYSIS.md  P0_TEST_PROGRESS.md  QWEN.md  README.md  STORAGE_TEST_ANALYSIS.md  STORAGE_TEST_COVERAGE_SUMMARY.md  STORAGE_TEST_IMPLEMENTATION_GUIDE.md  TODO_ANALYSIS_REPORT.md  UNKNOWN_TYPE_OPTIMIZATION.md  UNUSED_VISITOR_ANALYSIS.md  ZERO_COST_ABSTRACTION_FINAL.md  analysis_report.md  build.rs  cargo_check_output.txt  cargo_errors.md  (+19 more)
crates/bm25/: .gitignore  Cargo.toml  build.rs
crates/bm25/configs/: config.toml
crates/bm25/docs/: MODULE_ANALYSIS.md  architecture_assessment.md  configuration_module_analysis.md  merge_analysis.md  persistence.md  存储分析.md  改进方案.md
crates/bm25/docs/architecture/: api_module_design.md
crates/bm25/docs/metrics/: README.md  design.md
crates/bm25/index/: meta.json
crates/bm25/proto/: bm25.proto
crates/bm25/src/: error.rs  lib.rs  main.rs
crates/bm25/src/api/: embedded.rs  mod.rs
crates/bm25/src/config/: builder.rs  loader.rs  mod.rs  validator.rs
crates/bm25/src/index/: batch.rs  delete.rs  document.rs  manager.rs  mod.rs  persistence.rs  search.rs  stats.rs  tests.rs
crates/bm25/src/service/: config.rs  grpc.rs  metrics.rs  mod.rs  proto.rs
crates/bm25/src/storage/: factory.rs  manager.rs  mod.rs  redis.rs  stats_store.rs  storage_enum.rs  tantivy.rs
crates/bm25/src/tokenizer/: mixed_tokenizer.rs  mod.rs
crates/graphdb-api/: Cargo.toml  build.rs
crates/graphdb-api/src/: lib.rs
crates/graphdb-api/src/api/: http_server.rs  mod.rs  startup.rs
crates/graphdb-config/: Cargo.toml
crates/graphdb-config/src/: lib.rs
crates/graphdb-config/src/config/: logging.rs  mod.rs
crates/graphdb-core/: Cargo.toml
crates/graphdb-core/src/: lib.rs
crates/graphdb-core/src/core/: mod.rs  mvcc.rs  session_stats.rs
crates/graphdb-core/tests/geography_tests/: mod.rs
crates/graphdb-query/: Cargo.toml
crates/graphdb-query/src/: lib.rs
crates/graphdb-query/src/query/: query_pipeline_manager.rs
crates/graphdb-query/tests/: integration_cypher_create.rs  integration_dcl.rs  integration_ddl.rs  integration_management.rs  metadata_integration_test.rs  metadata_provider_test.rs  metadata_resolution_test.rs
crates/graphdb-query/tests/common/: mod.rs  test_storage.rs
crates/graphdb-query/tests/dcl/: common.rs  mod.rs
crates/graphdb-query/tests/dml/: batch_operations.rs
crates/graphdb-query/tests/dql/: fetch.rs
crates/graphdb-query/tests/optimizer/: cost_based.rs  cost_based_strategies.rs  heuristic_coverage.rs  result_equivalence.rs
crates/graphdb-search/: Cargo.toml
crates/graphdb-search/src/: lib.rs
crates/graphdb-search/src/search/: config.rs  engine.rs  error.rs  factory.rs  isolation_test.rs  manager.rs  (+4 more)
crates/graphdb-storage/: Cargo.toml
crates/graphdb-storage/src/: lib.rs
crates/graphdb-storage/tests/: compaction.rs  concurrent_operations.rs  full_lifecycle.rs  persistence_recovery.rs  scenario.rs  wal_recovery.rs
crates/graphdb-sync/: Cargo.toml
crates/graphdb-sync/src/: lib.rs
crates/graphdb-transaction/: Cargo.toml
crates/graphdb-transaction/src/: lib.rs
crates/inversearch/: .gitignore  Cargo.toml  HIGHLIGHTER_COMPARISON.md  README.md  build.rs  cargo_errors_report.md
crates/inversearch/configs/: config.toml
crates/inversearch/docs/: highlight架构分析与改进建议.md  migration_analysis.md  storage_factory_usage.md  worker_architecture_design.md  功能分析.md  存储分析.md  存储改进方案.md
crates/inversearch/examples/: highlight_demo.rs
crates/inversearch/proto/: inversearch.proto
crates/inversearch/src/: async_.rs  error.rs  lib.rs  main.rs  metrics.rs  proto.rs  service.rs
crates/inversearch/tests/: cache.rs  charset.rs  concurrency.rs  config_test.rs  error.rs  highlight.rs  index.rs  multi_field.rs  resolver.rs  search.rs  service.rs  storage_test.rs  suggestion.rs
crates/vector-client/: Cargo.toml  build.rs
crates/vector-client/docs/: llama_cpp_embedding_design.md
crates/vector-client/src/: error.rs  lib.rs
graphdb-cli/: Cargo.toml
graphdb-cli/src/: cli.rs  lib.rs  main.rs
graphdb-cli/src/analysis/: explain.rs  mod.rs  profile.rs  timing.rs
graphdb-cli/src/client/: client.rs  client_trait.rs  embedded.rs  http.rs  mod.rs  transaction.rs
graphdb-cli/src/command/: executor.rs  meta_commands.rs  mod.rs  parser.rs  script.rs
graphdb-cli/src/completion/: completer.rs  context.rs
graphdb-cli/src/config/: settings.rs
graphdb-cli/src/input/: handler.rs
graphdb-cli/src/io/: csv_handler.rs  export.rs  import.rs  json_handler.rs  mod.rs  progress.rs  streaming.rs
graphdb-cli/src/output/: csv.rs  formatter.rs  json.rs  mod.rs  table.rs
graphdb-cli/src/session/: manager.rs  mod.rs
graphdb-cli/src/transaction/: isolation.rs  manager.rs  state.rs
graphdb-cli/src/utils/: error.rs
graphdb-cli/tests/: command_integration_tests.rs  completion_integration_tests.rs
ref/bm25/: Cargo.toml  README.md  build.rs  cargo_errors_report.md
ref/bm25/configs/: config.toml
ref/bm25/docs/: FUNCTIONALITY_SUMMARY.md  条件编译架构分析.md
ref/bm25/proto/: bm25.proto
ref/bm25/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
ref/inversearch/: .gitignore  Cargo.toml  build.rs
ref/inversearch/configs/: config.toml
ref/inversearch/docs/: dynamic.md  missing-features.md  module-organization.md  serialize_implementation_plan.md  serialize_missing_features.md  持久化存储架构分析.md  索引和持久化优化设计方案.md
ref/inversearch/proto/: inversearch.proto
ref/inversearch/src/: async_.rs  lib.rs  main.rs  proto.rs  serialize.rs  service.rs
(+4568 files in other folders)
