[package]
name = "graphdb"
version = "0.1.0"
edition = "2021"
description = "A lightweight single-node graph database implemented in Rust"
authors = ["GraphDB Contributors"]
license = "Apache-2.0"
repository = "https://github.com/kkkqkx123/graphDB"
homepage = "https://github.com/kkkqkx123/graphDB"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
tokio-stream = "0.1"
bit-set = "0.8"
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4.29"
flexi_logger = { version = "0.31", features = ["async"] }
thiserror = "2.0.17"
moka = { version = "0.12", features = ["sync", "future"] }
lru = "0.16.2"
oxicode = { version = "0.2.1", features = ["serde"] }
toml = "0.9.8"
num_cpus = "1.17.0"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
bcrypt = "0.18.0"
regex = "1.11.1"
rand = "0.8.5"
rayon = "1.10.0"
dashmap = "6.1"
parking_lot = "0.12"
crossbeam-utils = "0.8"
sysinfo = "0.30"
dec = "0.4.11"
futures = "0.3"
tracing = "0.1"
metrics = "0.23"
memmap2 = "0.9"

axum = { version = "0.8", features = ["macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"], optional = true }
http = { version = "1.1", optional = true }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"], optional = true }
async-trait = { version = "0.1", optional = true }

bm25-service = { path = "crates/bm25", default-features = false, features = ["embedded", "storage-tantivy"], optional = true }
inversearch-service = { path = "crates/inversearch", default-features = false, features = ["embedded", "store"], optional = true }
tantivy = { version = "0.24", optional = true }
vector-client = { path = "crates/vector-client", features = ["qdrant"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "sysinfoapi", "fileapi", "minwinbase"] }

[lib]
name = "graphdb"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "graphdb-server"
path = "src/main.rs"
required-features = ["server"]

[build-dependencies]
cbindgen = { version = "0.29", optional = true }
tonic-build = { version = "0.12", optional = true }
prost-build = { version = "0.13", optional = true }

[features]
default = ["server", "fulltext-search", "qdrant", "c-api", "grpc"]
qdrant = ["dep:vector-client"]
embedded = []
c-api = ["embedded", "dep:cbindgen"]
server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:http", "dep:sqlx", "dep:async-trait"]
grpc = ["server", "dep:tonic", "dep:prost", "dep:tonic-build", "dep:prost-build"]
fulltext-search = ["dep:bm25-service", "dep:inversearch-service", "dep:tantivy"]

[profile.dev]
opt-level = 0
debug = true
codegen-units = 64

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.23.0"
criterion = { version = "0.5", features = ["async_tokio"] }
serial_test = "3.0"