[workspace]
resolver = "2"
members = [
    ".",
    "crates/graphdb-core",
    "crates/graphdb-config",
    "crates/graphdb-search",
    "crates/graphdb-sync",
    "crates/graphdb-transaction",
    "crates/graphdb-storage",
    "crates/graphdb-query",
    "crates/graphdb-api",
    "crates/tantivy",
    "crates/tantivy/query-grammar",
    "crates/tantivy/bitpacker",
    "crates/tantivy/common",
    "crates/tantivy/ownedbytes",
    "crates/tantivy/stacker",
    "crates/tantivy/sstable",
    "crates/tantivy/tokenizer-api",
    "crates/tantivy/columnar",
]

[package]
name = "graphdb"
version = "0.1.0"
edition = "2021"
description = "A lightweight single-node graph database implemented in Rust"
authors = ["GraphDB Contributors"]
license = "Apache-2.0"
repository = "https://github.com/kkkqkx123/graphDB"
homepage = "https://github.com/kkkqkx123/graphDB"

[lib]
name = "graphdb"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "graphdb-server"
path = "src/main.rs"
required-features = ["server"]

[dependencies]
graphdb-core = { path = "crates/graphdb-core" }
graphdb-config = { path = "crates/graphdb-config" }
graphdb-search = { path = "crates/graphdb-search" }
graphdb-sync = { path = "crates/graphdb-sync" }
graphdb-transaction = { path = "crates/graphdb-transaction" }
graphdb-storage = { path = "crates/graphdb-storage" }
graphdb-query = { path = "crates/graphdb-query" }
graphdb-api = { path = "crates/graphdb-api" }

# server binary deps
clap = { version = "4.5.53", features = ["derive"] }
flexi_logger = { version = "0.31", features = ["async"] }
tracing = "0.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }

# build-time deps
cbindgen = { version = "0.29", optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }
prost-build = { version = "0.13", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "sysinfoapi", "fileapi", "minwinbase"] }

[features]
default = ["server", "fulltext-search", "qdrant", "c-api", "grpc"]
server = ["graphdb-api/server", "graphdb-config/server"]
fulltext-search = ["graphdb-search/fulltext-search"]
qdrant = ["graphdb-sync/qdrant", "graphdb-api/qdrant", "graphdb-query/qdrant"]
embedded = ["graphdb-api/embedded"]
c-api = ["graphdb-api/embedded", "dep:cbindgen"]
grpc = ["graphdb-api/grpc", "dep:tonic-build", "dep:prost-build"]

[profile.dev]
opt-level = 0
debug = true
codegen-units = 64

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.23.0"
criterion = { version = "0.5", features = ["async_tokio"] }
serial_test = "3.0"
