[workspace]
resolver = "2"
members = [
    ".",
    "crates/graphdb-core",
    "crates/graphdb-config",
    "crates/graphdb-search",
    "crates/graphdb-sync",
    "crates/graphdb-transaction",
    "crates/graphdb-storage",
    "crates/graphdb-query",
    "crates/graphdb-api",
    "crates/tantivy",
    "crates/tantivy/query-grammar",
    "crates/tantivy/bitpacker",
    "crates/tantivy/common",
    "crates/tantivy/ownedbytes",
    "crates/tantivy/stacker",
    "crates/tantivy/sstable",
    "crates/tantivy/tokenizer-api",
    "crates/tantivy/columnar",
    "crates/vector-client",
]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
log = "0.4.29"
parking_lot = "0.12"
dashmap = "6.1"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
regex = "1.11.1"
rand = "0.8.5"
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"

# shared across sub-crates
crossbeam-utils = "0.8"
crc32fast = "1.5"
zstd = "0.13"
bumpalo = "3.16"
bitvec = "1.0"
postcard = { version = "1.1", features = ["use-std"] }
dec = "0.4.11"
moka = { version = "0.12", features = ["sync", "future"] }
rayon = "1.10.0"
num_cpus = "1.17.0"
bcrypt = "0.18.0"
tokio-stream = "0.1"
libc = "0.2"
memmap2 = "0.9"

# dev-deps shared across sub-crates
tempfile = "3.23.0"
serial_test = "3.0"

[package]
name = "graphdb"
version = "0.1.0"
edition = "2021"
description = "A lightweight single-node graph database implemented in Rust"
authors = ["GraphDB Contributors"]
license = "Apache-2.0"
repository = "https://github.com/kkkqkx123/graphDB"
homepage = "https://github.com/kkkqkx123/graphDB"

[lib]
name = "graphdb"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "graphdb-server"
path = "src/main.rs"
required-features = ["server"]

[dependencies]
graphdb-core = { path = "crates/graphdb-core" }
graphdb-config = { path = "crates/graphdb-config" }
graphdb-search = { path = "crates/graphdb-search" }
graphdb-sync = { path = "crates/graphdb-sync" }
graphdb-transaction = { path = "crates/graphdb-transaction" }
graphdb-storage = { path = "crates/graphdb-storage" }
graphdb-query = { path = "crates/graphdb-query" }
graphdb-api = { path = "crates/graphdb-api" }

# server binary deps
clap = { version = "4.5.53", features = ["derive"] }
flexi_logger = { version = "0.31", features = ["async"] }
tracing = "0.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }

# build-time deps
cbindgen = "0.29"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "sysinfoapi", "fileapi", "minwinbase"] }

[features]
default = ["server", "fulltext-search", "qdrant", "c-api", "grpc"]
server = ["graphdb-api/server", "graphdb-config/server"]
fulltext-search = ["graphdb-search/fulltext-search"]
qdrant = ["graphdb-api/qdrant", "graphdb-config/qdrant"]
embedded = ["graphdb-api/embedded", "graphdb-config/embedded"]
c-api = ["graphdb-api/embedded"]
grpc = ["graphdb-api/grpc"]

[profile.dev]
opt-level = 0
debug = true
codegen-units = 64

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.23.0"
criterion = { version = "0.5", features = ["async_tokio"] }
serial_test = "3.0"
parking_lot = "0.12"
serde_json = "1.0.145"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
vector-client = { path = "crates/vector-client" }
async-trait = "0.1"
dashmap = "6.1"
rand = "0.8"
log = "0.4"
regex = "1"
toml = "0.9"
