[package]
name = "graphdb_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core graphdb library (embedded mode) - temporarily disabled due to compilation issues
# graphdb = { path = "..", default-features = false, features = ["embedded", "redb"] }
tokio = { version = "1.48", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
rustyline = { version = "14.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.17"
colored = "2.1"
thiserror = "2.0"
anyhow = "1.0"
toml = "0.8"
dirs = "6.0"
rpassword = "7.3"
csv = "1.3"
uuid = { version = "1.11", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3.0"
