[package]
name = "bm25-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "bm25_service"
path = "src/lib.rs"

[dependencies]
tantivy = "0.24"
jieba-rs = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.16"
toml = "0.8"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.10"
