[build-dependencies]
tonic-build = { version = "0.12", optional = true }
prost-build = { version = "0.13", optional = true }

[package]
name = "graphdb-api"
version = "0.1.0"
edition = "2021"

[dependencies]
graphdb-core = { path = "../graphdb-core" }
graphdb-config = { path = "../graphdb-config" }
graphdb-storage = { path = "../graphdb-storage" }
graphdb-query = { path = "../graphdb-query" }
graphdb-transaction = { path = "../graphdb-transaction" }
graphdb-sync = { path = "../graphdb-sync" }
graphdb-search = { path = "../graphdb-search" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
log = "0.4.29"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
tokio-stream = "0.1"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "6.1"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
regex = "1.11.1"
sysinfo = "0.30"
num_cpus = "1.17.0"
bcrypt = "0.18.0"

axum = { version = "0.8", features = ["macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"], optional = true }
http = { version = "1.1", optional = true }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"], optional = true }
async-trait = { version = "0.1", optional = true }
vector-client = { path = "../vector-client", features = ["qdrant-http"], optional = true }

[features]
server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:http", "dep:sqlx", "dep:async-trait"]
grpc = ["server", "dep:tonic", "dep:prost", "dep:tonic-build", "dep:prost-build"]
qdrant = ["dep:vector-client"]
embedded = []
