[build-dependencies]
tonic-build = { version = "0.12", optional = true }
prost-build = { version = "0.13", optional = true }

[package]
name = "graphdb-api"
version = "0.1.0"
edition = "2021"

[dependencies]
graphdb-core = { path = "../graphdb-core" }
graphdb-config = { path = "../graphdb-config" }
graphdb-storage = { path = "../graphdb-storage" }
graphdb-query = { path = "../graphdb-query" }
graphdb-transaction = { path = "../graphdb-transaction" }
graphdb-sync = { path = "../graphdb-sync" }
graphdb-search = { path = "../graphdb-search" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
futures.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
sysinfo = "0.30"
num_cpus.workspace = true
bcrypt.workspace = true

axum = { version = "0.8", features = ["macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"], optional = true }
http = { version = "1.1", optional = true }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"], optional = true }
async-trait = { workspace = true, optional = true }
vector-client = { path = "../vector-client", features = ["qdrant-http"], optional = true }

[features]
server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:http", "dep:sqlx", "dep:async-trait"]
grpc = ["server", "dep:tonic", "dep:prost", "dep:tonic-build", "dep:prost-build"]
qdrant = ["dep:vector-client", "graphdb-sync/qdrant", "graphdb-query/qdrant"]
embedded = []
