[package]
name = "graphdb-config"
version = "0.1.0"
edition = "2021"

[dependencies]
graphdb-core = { path = "../graphdb-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
thiserror = "2.0.17"
log = "0.4.29"
vector-client = { path = "../vector-client", features = ["qdrant-http"] }
flexi_logger = { version = "0.31", features = ["async"] }
parking_lot = "0.12"

[features]
server = []
