[package]
name = "graphdb-config"
version = "0.1.0"
edition = "2021"

[dependencies]
graphdb-core = { path = "../graphdb-core" }
serde.workspace = true
serde_json.workspace = true
toml = "0.9.8"
thiserror.workspace = true
log.workspace = true
vector-client = { path = "../vector-client", features = ["qdrant-http"], optional = true }
flexi_logger = { version = "0.31", features = ["async"] }
parking_lot.workspace = true

[features]
server = []
embedded = []
qdrant = ["dep:vector-client"]

[dev-dependencies]
tempfile.workspace = true
serial_test.workspace = true
