[package]
name = "graphdb-config"
version.workspace = true
edition.workspace = true

[dependencies]
graphdb-core = { path = "../graphdb-core" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
log.workspace = true
vector-client = { path = "../vector-client", features = ["qdrant-http"], optional = true }
flexi_logger.workspace = true
parking_lot.workspace = true

[features]
server = []
embedded = []
qdrant = ["dep:vector-client"]

[dev-dependencies]
tempfile.workspace = true
serial_test.workspace = true
