[package]
name = "graphdb-search"
version = "0.1.0"
edition = "2021"

[dependencies]
graphdb-core = { path = "../graphdb-core" }
graphdb-config = { path = "../graphdb-config" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
log = "0.4.29"
parking_lot = "0.12"
chrono = { version = "0.4.38", features = ["serde"] }
tantivy = { path = "../tantivy", optional = true }
dashmap = "6.1"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }

[features]
fulltext-search = ["dep:tantivy", "tantivy/jieba"]
