[package]
name = "graphdb-search"
version = "0.1.0"
edition = "2021"

[dependencies]
graphdb-core = { path = "../graphdb-core" }
graphdb-config = { path = "../graphdb-config" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true
chrono.workspace = true
tantivy = { path = "../tantivy", optional = true }
dashmap.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true

[features]
fulltext-search = ["dep:tantivy", "tantivy/jieba"]

[dev-dependencies]
tempfile.workspace = true
graphdb-sync = { path = "../graphdb-sync" }