[package]
name = "graphdb-search"
version.workspace = true
edition.workspace = true

[dependencies]
graphdb-core = { path = "../graphdb-core" }
graphdb-config = { path = "../graphdb-config" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true
chrono.workspace = true
tantivy = { path = "../tantivy", optional = true }
graphdb-fulltext-client = { path = "../fulltext-client", optional = true }
dashmap.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["fs"] }

[features]
fulltext-search = ["dep:tantivy"]
jieba = ["dep:graphdb-fulltext-client"]

[dev-dependencies]
tempfile.workspace = true
graphdb-sync = { path = "../graphdb-sync", features = ["fulltext-search"] }
