[package]
name = "graphdb-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
graphdb-core = { path = "../graphdb-core" }
graphdb-transaction = { path = "../graphdb-transaction" }
graphdb-sync = { path = "../graphdb-sync" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
log = "0.4.29"
parking_lot = "0.12"
dashmap = "6.1"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
memmap2 = "0.9"
crc32fast = "1.5"
md-5 = "0.10"
zstd = "0.13"
bumpalo = "3.16"
lru = "0.16.2"
postcard = { version = "1.1", features = ["use-std"] }
bitvec = "1.0"
dec = "0.4.11"
crossbeam-utils = "0.8"
rayon = "1.10.0"
rand = "0.8.5"
moka = { version = "0.12", features = ["sync", "future"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
