[package]
name = "graphdb-storage"
version.workspace = true
edition.workspace = true

[dependencies]
graphdb-core = { path = "../graphdb-core" }
graphdb-transaction = { path = "../graphdb-transaction" }
graphdb-sync = { path = "../graphdb-sync" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
chrono.workspace = true
uuid.workspace = true
memmap2.workspace = true
crc32fast.workspace = true
md-5.workspace = true
zstd.workspace = true
bumpalo.workspace = true
postcard.workspace = true
bitvec.workspace = true
dec.workspace = true
crossbeam-utils.workspace = true
rayon.workspace = true
rand.workspace = true
moka.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
