[package]
name = "graphdb-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
graphdb-core = { path = "../graphdb-core" }
graphdb-search = { path = "../graphdb-search" }
graphdb-config = { path = "../graphdb-config" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
log = "0.4.29"
dashmap = "6.1"
parking_lot = "0.12"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
rand = "0.8.5"
vector-client = { path = "../vector-client", features = ["qdrant-http"], optional = true }
tracing = "0.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
futures = "0.3"
async-trait = "0.1"

[features]
qdrant = ["dep:vector-client"]
