[package]
name = "graphdb-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
graphdb-core = { path = "../graphdb-core" }
graphdb-search = { path = "../graphdb-search" }
graphdb-config = { path = "../graphdb-config" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
vector-client = { path = "../vector-client", features = ["qdrant-http"] }
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
