[package]
name = "graphdb-transaction"
version = "0.1.0"
edition = "2021"

[dependencies]
graphdb-core = { path = "../graphdb-core" }
graphdb-sync = { path = "../graphdb-sync" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
log = "0.4.29"
parking_lot = "0.12"
dashmap = "6.1"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
memmap2 = "0.9"
crossbeam-utils = "0.8"
postcard = { version = "1.1", features = ["use-std"] }
crc32fast = "1.5"
num_cpus = "1.17.0"
zstd = "0.13"
