[package]
name = "inversearch-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager", "aio"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
linked-hash-map = "0.5"
lazy_static = "1.4"
lru = "0.12"
unicode-normalization = "0.1"
async-trait = "0.1"
zstd = "0.13"
base64 = "0.22"
ahash = "0.8"
bumpalo = "3.16"
lz4_flex = "0.11"
ciborium = "0.2"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[features]
default = ["service", "store"]
service = ["tonic", "prost", "tokio/full"]
store = ["store-cached"]
store-memory = []
store-file = []
store-redis = ["redis"]
store-wal = []
store-cached = []
