[package]
name = "inversearch-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "inversearch_service"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["use-std"] }
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
linked-hash-map = "0.5"
lazy_static = "1.4"
lru = "0.12"
unicode-normalization = "0.1"
async-trait = "0.1"
zstd = "0.13"
base64 = "0.22"
ahash = "0.8"
bumpalo = "3.16"
lz4_flex = "0.11"
ciborium = "0.2"
dashmap = "6.1"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
