[package]
name = "vector-client"
version.workspace = true
edition.workspace = true
description = "A vector database client crate with support for multiple backends"

[lib]
name = "vector_client"
path = "src/lib.rs"

[features]
default = ["qdrant"]
qdrant = ["qdrant-http"]
qdrant-http = []
qdrant-grpc = ["dep:tonic", "dep:prost", "dep:prost-types"]
llama_cpp = ["llama-cpp-2"]

[dependencies]
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true
chrono.workspace = true
dashmap.workspace = true
llama-cpp-2 = { version = "0.1", optional = true }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
criterion = { version = "0.5", features = ["async_tokio"] }
futures.workspace = true


